--- a/package.json
+++ b/package.json
@@ -4,13 +4,20 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node startServer.js",
+    "devcss": "postcss public/stylesheets/tailwind.css -o public/stylesheets/style.css -w"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "autoprefixer": "^10.4.16",
     "ejs": "^3.1.9",
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "postcss": "^8.4.31",
+    "tailwindcss": "^3.3.3"
+  },
+  "devDependencies": {
+    "postcss-cli": "^10.1.0"
   }
 }
